--- a/read-before-it-explodes-client/package.json
+++ b/read-before-it-explodes-client/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^2.2.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.32"
   }
 }
