--- a/read-before-it-explodes-client/package.json
+++ b/read-before-it-explodes-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "read-before-it-explodes",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,14 +11,17 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "antd": "^4.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-explode": "^2.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^2.2.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
