--- a/read-before-it-explodes-server/package.json
+++ b/read-before-it-explodes-server/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.9",
     "@types/socket.io": "^2.1.12",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^2.2.0",
