--- a/read-before-it-explodes-server/package.json
+++ b/read-before-it-explodes-server/package.json
@@ -10,8 +10,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^2.2.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typeorm": "^0.2.29"
   },
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts"
