--- a/read-before-it-explodes-server/package.json
+++ b/read-before-it-explodes-server/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "@types/socket.io": "^2.1.12",
+    "apollo-server-express": "^2.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.2.0",
     "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.2.29"
   },
   "scripts": {
